# Password-manager

./: CMakeLists.txt  README.md  encryptor.cpp  encryptor.h  main.cpp  storage.cpp  storage.h
